@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.5 2003/07/17 21:29:48 grant Exp $
+# $NetBSD: Makefile,v 1.6 2004/01/31 21:36:54 jlam Exp $
 
-DISTNAME=	ccache-2.2
+DISTNAME=	ccache-2.3
 CATEGORIES=	devel
 MASTER_SITES=	http://ccache.samba.org/ftp/ccache/
 
@@ -8,6 +8,9 @@ MAINTAINER=	tron@NetBSD.org
 HOMEPAGE=	http://ccache.samba.org/
 COMMENT=	Cache for C/C++ compilers
 
-GNU_CONFIGURE=	YES
+USE_BUILDLINK3=		yes
+GNU_CONFIGURE=		yes
+
+INSTALLATION_DIRS=	bin man/man1
 
 .include "../../mk/bsd.pkg.mk"
